force-app/main/default/objects/B25__Calendar_Reservation_Type__c/B25__Calendar_Reservation_Type__c.object-meta.xml
<CustomObject>
    <description>Defines which Reservation Types are visible on which Calendars</description>
    <label>Calendar Reservation Type</label>
    <nameField>
        <displayFormat>CRT-{0}</displayFormat>
        <label>Calendar Reservation Type Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Calendar Reservation Types</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>