force-app/main/default/objects/B25__Calendar_Reservation_Type__c/fields/B25__Default__c.field-meta.xml
<CustomField>
    <fullName>B25__Default__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, this will be the default Reservation Type for new reservations on this Calendar.</description>
    <inlineHelpText>Si cette option est cochée, les nouvelles réservations de ce calendrier auront le type par défaut.</inlineHelpText>
    <label>Default</label>
    <type>Checkbox</type>
</CustomField>