force-app/main/default/objects/B25__Calendar_Reservation_Type__c/fields/B25__Order__c.field-meta.xml
<CustomField>
    <fullName>B25__Order__c</fullName>
    <description>The reservation type dropdown is sorted based on this field with lower numbers first.</description>
    <inlineHelpText>La liste déroulante des types de réservations est triée en fonction de ce champ, les chiffres les plus bas étant les premiers.</inlineHelpText>
    <label>Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>