force-app/main/default/objects/B25__Calendar_Reservation_Type__c/fields/B25__Reservation_Type__c.field-meta.xml
<CustomField>
    <fullName>B25__Reservation_Type__c</fullName>
    <label>Reservation Type</label>
    <referenceTo>B25__Reservation_Type__c</referenceTo>
    <relationshipLabel>Calendar Reservation Types</relationshipLabel>
    <relationshipName>Calendar_Reservation_Types</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>